tests/ui/class-method-missing.stderr
error[E0046]: not all trait items implemented, missing: `eat`
  --> $DIR/class-method-missing.rs:9:1
   |
LL |   fn eat(&self);
   |   -------------- `eat` from trait
...
LL | impl Animal for Cat {
   | ^^^^^^^^^^^^^^^^^^^ missing `eat` in implementation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
